--- a/src/config.ini
+++ b/src/config.ini
@@ -1,3 +1,7 @@
 [docker]
 status = 1
 addr = 0.0.0.0:2375
+
+[redis]
+status = 1                                      # 是否启动 Redis 0 关闭 1 启动
+addr = 0.0.0.0:6379
